- fix multiplayer layout issue - style player info and game info sections - add minor breakpoint for discard cards to accomodate smaller screens - move game header into main layout on multiplayer

--- a/src/Card.css
+++ b/src/Card.css
@@ -56,6 +56,11 @@
   border: none;
   border-radius: 10px;
 
+  @media (max-width: 900px) {
+    width: 90px;
+    height: 150px;
+  }
+
   @media (max-width: 768px) {
     width: 70px;
     height: 116px;
